[package]
name = "wkt"
description = "Rust read/write support for well-known text (WKT)"
version = "0.2.0"
authors = ["Corey Farwell <coreyf@rwell.org>"]
license = "MIT/Apache-2.0"
repository = "https://github.com/georust/rust-wkt"

[dependencies]
geo-types = {version = "0.1.1", optional = true}
num-traits = "0.2"

[features]
default = ["geo-types"]

[lib]
doctest = false